--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,4 +32,75 @@
 html {
     font-size: 62.5%;
     font-family: 'Kanit', sans-serif;
+    color: var(--white);
+}
+
+header {
+    position: relative;
+    width: 100%;
+    height: 334px;
+    min-width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background: linear-gradient(207.8deg, var(--black) 16.69%, var(--bitcoin) 100%);
+}
+
+.header__imagotype {
+    width: 140px;
+    height: 40px;
+    margin-top: 60px;
+    display: flex;
+    align-self: center;
+}
+
+.header__headline {
+    width: 90%;
+    height: 218px;
+    margin-top: 40px;
+    min-width: 288px;
+    max-width: 900px;
+    align-self: center;
+}
+
+.header__headline h1 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    font-family: 'Trirong', serif;
+}
+
+.header__headline p {
+    margin-top: 25px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+}
+
+.header__headline .header__button {
+    position: absolute;
+    top: 270px;
+    left: calc(50% - 114.5px);
+    display: block;
+    margin-top: 35px;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: var(--black);
+    text-decoration: none;
+    background-color: var(--gray);
+    box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+    border: none;
+    border-radius: 5px;
+}
+
+.header__button span {
+    display: inline-block;
+    width: 13px;
+    height: 8px;
+    margin-left: 10px;
+    background-image: url('../assets/icons/down-arrow.svg');
 }
