--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,7 @@ header {
   position: relative;
   width: 100%;
   height: 334px;
+  min-width: 324px;
   display: flex;
   flex-direction: column;
   justify-content: center;
